# lmops-icai

./: .env.example  .gitignore  Dockerfile  README.md  TAREA_1_VALIDACION_FORMATO.md  ejemplo_uso.py  pyproject.toml
app/: app.py  constants.py
app/auth/: client_auth.py
app/core/: genesys_handler.py
app/models/: auth.py
app/routers/: agent.py
app/services/: ai_service.py  file_info_service.py  logging_service.py
app/templates/: bot_visualizer.html  client.html  client.py  client_ulaw.html  voice_client.html
frontend/: README.md  index.html  serve.py  simple.html
